package rec.data;

import "rec/data/Operation.proto";
import "rec/util/file/VirtualFile.proto";

message Source {
  enum Type {
    MENU = 0;
    KEYBOARD = 1;
    CONTROL = 2;
    AUTOMATIC = 3;
  };

  // The actual source.  If this is a menu, these are the indices of menus,
  // submenus and items in order; if this is a keystroke, this is a list of all
  // the keys being held down; if this is a control, these are the indexes of
  // the control.  This implies that all menus and items within menus and
  // all buttons have a permanent index.

  optional Type type = 1;
  repeated uint32 index = 2;
  optional uint32 modifier_keys = 3;
};

message Action {
  enum Type {
    OPERATION = 0;
    UNDO = 1;
    REDO = 2;
    START_OF_SESSION = 3;
    END_OF_SESSION = 4;
  };

  optional Type type = 1;
  optional uint64 timestamp = 2;
  optional uint64 index = 3;
  repeated Source source = 4;
  optional util.file.VirtualFile file = 5;
  optional string type_name = 6;
  optional Operations operations = 7;
  optional Operations undo = 8;
  optional uint32 undo_index = 9;
};

message UndoRecord {
  optional string type_name = 1;
  optional util.file.VirtualFile file = 2;
  optional string before = 3;
  optional string after = 4;
  optional uint64 timestamp = 5;
};